lib/common-music/sa/include/sa.h

EXPORT Lookup *_wrap_new_Lookup (Table *larg1, long larg2, SndObj *larg3, int larg4, int larg5, int larg6, float larg7);
EXPORT void _wrap_Lookup_SetMode (Lookup *larg1, int larg2, int larg3);
EXPORT void _wrap_delete_Lookup (Lookup *larg1);
EXPORT void _wrap_Lookup_Offset (Lookup *larg1, long larg2);
EXPORT void _wrap_Lookup_SetTable (Lookup *larg1, Table *larg2);
EXPORT int _wrap_Lookup_Set (Lookup *larg1, char *larg2, float larg3);
EXPORT int _wrap_Lookup_Connect (Lookup *larg1, char *larg2, void *larg3);
EXPORT Lookupi *_wrap_new_Lookupi_empty ();
EXPORT Lookupi *_wrap_new_Lookupi (Table *larg1, long larg2, SndObj *larg3, int larg4, int larg5, int larg6, float larg7);
EXPORT void _wrap_delete_Lookupi (Lookupi *larg1);
EXPORT Rand *_wrap_new_Rand_empty ();
EXPORT Rand *_wrap_new_Rand (float larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_Rand (Rand *larg1);
EXPORT void _wrap_Rand_SetAmp (Rand *larg1, float larg2, SndObj *larg3);
EXPORT int _wrap_Rand_Set (Rand *larg1, char *larg2, float larg3);
EXPORT int _wrap_Rand_Connect (Rand *larg1, char *larg2, void *larg3);
EXPORT PhOscili *_wrap_new_PhOscili_empty ();
EXPORT PhOscili *_wrap_new_PhOscili (Table *larg1, float larg2, float larg3, SndObj *larg4, SndObj *larg5, SndObj *larg6, int larg7, float larg8);
EXPORT void _wrap_delete_PhOscili (PhOscili *larg1);
EXPORT int _wrap_PhOscili_Connect (PhOscili *larg1, char *larg2, void *larg3);
EXPORT Randh *_wrap_new_Randh_empty ();
EXPORT Randh *_wrap_new_Randh (float larg1, float larg2, SndObj *larg3, SndObj *larg4, int larg5, float larg6);
EXPORT void _wrap_delete_Randh (Randh *larg1);
EXPORT int _wrap_Randh_Connect (Randh *larg1, char *larg2, void *larg3);
EXPORT void _wrap_Randh_SetSr (Randh *larg1, float larg2);
EXPORT void _wrap_Randh_SetFreq (Randh *larg1, float larg2, SndObj *larg3);
EXPORT int _wrap_Randh_Set (Randh *larg1, char *larg2, float larg3);
EXPORT Randi *_wrap_new_Randi_empty ();
EXPORT Randi *_wrap_new_Randi (float larg1, float larg2, SndObj *larg3, SndObj *larg4, int larg5, float larg6);
EXPORT void _wrap_delete_Randi (Randi *larg1);
EXPORT FFT *_wrap_new_FFT_empty ();
EXPORT FFT *_wrap_new_FFT (Table *larg1, SndObj *larg2, float larg3, int larg4, int larg5, float larg6);
EXPORT void _wrap_delete_FFT (FFT *larg1);
EXPORT int _wrap_FFT_GetFFTSize (FFT *larg1);
EXPORT int _wrap_FFT_GetHopSize (FFT *larg1);
EXPORT void _wrap_FFT_SetWindow (FFT *larg1, Table *larg2);
EXPORT int _wrap_FFT_Connect (FFT *larg1, char *larg2, void *larg3);
EXPORT int _wrap_FFT_Set (FFT *larg1, char *larg2, float larg3);
EXPORT void _wrap_FFT_SetScale (FFT *larg1, float larg2);
EXPORT void _wrap_FFT_SetFFTSize (FFT *larg1, int larg2);
EXPORT void _wrap_FFT_SetHopSize (FFT *larg1, int larg2);
EXPORT IFFT *_wrap_new_IFFT_empty ();
EXPORT IFFT *_wrap_new_IFFT (Table *larg1, SndObj *larg2, int larg3, int larg4, float larg5);
EXPORT void _wrap_delete_IFFT (IFFT *larg1);
EXPORT int _wrap_IFFT_GetFFTSize (IFFT *larg1);
EXPORT int _wrap_IFFT_GetHopSize (IFFT *larg1);
EXPORT void _wrap_IFFT_SetWindow (IFFT *larg1, Table *larg2);
EXPORT int _wrap_IFFT_Connect (IFFT *larg1, char *larg2, void *larg3);
EXPORT int _wrap_IFFT_Set (IFFT *larg1, char *larg2, float larg3);
EXPORT void _wrap_IFFT_SetFFTSize (IFFT *larg1, int larg2);
EXPORT void _wrap_IFFT_SetHopSize (IFFT *larg1, int larg2);
EXPORT PVA *_wrap_new_PVA_empty ();
EXPORT PVA *_wrap_new_PVA (Table *larg1, SndObj *larg2, float larg3, int larg4, int larg5, float larg6);
EXPORT void _wrap_delete_PVA (PVA *larg1);
EXPORT float _wrap_PVA_Outphases (PVA *larg1, int larg2);
EXPORT int _wrap_PVA_Set (PVA *larg1, char *larg2, float larg3);
EXPORT void _wrap_PVA_SetFFTSize (PVA *larg1, int larg2);
EXPORT void _wrap_PVA_SetHopSize (PVA *larg1, int larg2);
EXPORT PVS *_wrap_new_PVS (Table *larg1, SndObj *larg2, int larg3, int larg4, float larg5);
EXPORT void _wrap_delete_PVS (PVS *larg1);
EXPORT int _wrap_PVS_Set (PVS *larg1, char *larg2, float larg3);
EXPORT void _wrap_PVS_SetFFTSize (PVS *larg1, int larg2);
EXPORT void _wrap_PVS_SetHopSize (PVS *larg1, int larg2);
EXPORT SndObj *_wrap_PVRead_Outchannel (PVRead *larg1, int larg2);
EXPORT int _wrap_PVRead_Set (PVRead *larg1, char *larg2, float larg3);
EXPORT void _wrap_PVRead_SetInput (PVRead *larg1, char *larg2);
EXPORT void _wrap_PVRead_SetTimescale (PVRead *larg1, float larg2);
EXPORT PVRead *_wrap_new_PVRead_empty ();
EXPORT PVRead *_wrap_new_PVRead (char *larg1, float larg2, int larg3, float larg4);
EXPORT void _wrap_delete_PVRead (PVRead *larg1);
EXPORT IFGram *_wrap_new_IFGram_empty ();
EXPORT IFGram *_wrap_new_IFGram (Table *larg1, SndObj *larg2, float larg3, int larg4, int larg5, float larg6);
EXPORT void _wrap_delete_IFGram (IFGram *larg1);
EXPORT int _wrap_IFGram_Set (IFGram *larg1, char *larg2, float larg3);
EXPORT int _wrap_IFGram_Connect (IFGram *larg1, char *larg2, void *larg3);
EXPORT void _wrap_IFGram_SetFFTSize (IFGram *larg1, int larg2);
EXPORT SinAnal *_wrap_new_SinAnal_empty ();
EXPORT SinAnal *_wrap_new_SinAnal (SndObj *larg1, float larg2, int larg3, int larg4, int larg5, float larg6);
EXPORT void _wrap_delete_SinAnal (SinAnal *larg1);
EXPORT int _wrap_SinAnal_GetTrackID (SinAnal *larg1, int larg2);
EXPORT int _wrap_SinAnal_GetTracks (SinAnal *larg1);
EXPORT int _wrap_SinAnal_Set (SinAnal *larg1, char *larg2, float larg3);
EXPORT int _wrap_SinAnal_Connect (SinAnal *larg1, char *larg2, void *larg3);
EXPORT void _wrap_SinAnal_SetThreshold (SinAnal *larg1, float larg2);
EXPORT void _wrap_SinAnal_SetIFGram (SinAnal *larg1, SndObj *larg2);
EXPORT void _wrap_SinAnal_SetMaxTracks (SinAnal *larg1, int larg2);
EXPORT SinSyn *_wrap_new_SinSyn_empty ();
EXPORT SinSyn *_wrap_new_SinSyn (SinAnal *larg1, int larg2, Table *larg3, float larg4, int larg5, float larg6);
EXPORT void _wrap_delete_SinSyn (SinSyn *larg1);
EXPORT void _wrap_SinSyn_SetTable (SinSyn *larg1, Table *larg2);
EXPORT void _wrap_SinSyn_SetMaxTracks (SinSyn *larg1, int larg2);
EXPORT void _wrap_SinSyn_SetScale (SinSyn *larg1, float larg2);
EXPORT int _wrap_SinSyn_Set (SinSyn *larg1, char *larg2, float larg3);
EXPORT int _wrap_SinSyn_Connect (SinSyn *larg1, char *larg2, void *larg3);
EXPORT ReSyn *_wrap_new_ReSyn_empty ();
EXPORT ReSyn *_wrap_new_ReSyn (SinAnal *larg1, int larg2, Table *larg3, float larg4, float larg5, float larg6, int larg7, float larg8);
EXPORT void _wrap_ReSyn_SetPitch (ReSyn *larg1, float larg2);
EXPORT void _wrap_ReSyn_SetTimeScale (ReSyn *larg1, float larg2);
EXPORT int _wrap_ReSyn_Set (ReSyn *larg1, char *larg2, float larg3);
EXPORT void _wrap_delete_ReSyn (ReSyn *larg1);
EXPORT AdSyn *_wrap_new_AdSyn_empty ();
EXPORT AdSyn *_wrap_new_AdSyn (SinAnal *larg1, int larg2, Table *larg3, float larg4, float larg5, int larg6, float larg7);
EXPORT void _wrap_delete_AdSyn (AdSyn *larg1);
EXPORT IFAdd *_wrap_new_IFAdd_empty ();
EXPORT IFAdd *_wrap_new_IFAdd (IFGram *larg1, int larg2, Table *larg3, float larg4, float larg5, float larg6, int larg7, float larg8);
EXPORT void _wrap_delete_IFAdd (IFAdd *larg1);
EXPORT SpecMult *_wrap_new_SpecMult_empty ();
EXPORT SpecMult *_wrap_new_SpecMult (SndObj *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT SpecMult *_wrap_new_SpecMult_table (Table *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_SpecMult (SpecMult *larg1);
EXPORT int _wrap_SpecMult_Connect (SpecMult *larg1, char *larg2, void *larg3);
EXPORT void _wrap_SpecMult_SetTable (SpecMult *larg1, Table *larg2);
EXPORT SpecInterp *_wrap_new_SpecInterp_empty ();
EXPORT Synth *_wrap_new_Synth (int larg1, SndObj **larg2, long larg3, void (*larg4)(SndObj *), int larg5, float larg6);