lib/common-music/sa/cffi-sa.lisp


(defcfun ("_wrap_new_Lookup" new_Lookup) :sndobj_lookup
  (table :sndobj_table)
  (offset :long)
  (InObj :sndobj)
  (mode :int)
  (normal :int)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_Lookup_SetMode" Lookup_SetMode) :void
  (self :sndobj_lookup)
  (mode :int)
  (normal :int))

(defcfun ("_wrap_delete_Lookup" delete_Lookup) :void
  (self :sndobj_lookup))

(defcfun ("_wrap_Lookup_Offset" Lookup_Offset) :void
  (self :sndobj_lookup)
  (offset :long))

(defcfun ("_wrap_Lookup_SetTable" Lookup_SetTable) :void
  (self :sndobj_lookup)
  (table :sndobj_table))

(defcfun ("_wrap_Lookup_Set" Lookup_Set) :int
  (self :sndobj_lookup)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Lookup_Connect" Lookup_Connect) :int
  (self :sndobj_lookup)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_Lookupi_empty" new_Lookupi_empty) :sndobj_lookupi)

(defcfun ("_wrap_new_Lookupi" new_Lookupi) :sndobj_lookupi
  (table :sndobj_table)
  (offset :long)
  (InObj :sndobj)
  (mode :int)
  (normal :int)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Lookupi" delete_Lookupi) :void
  (self :sndobj_lookupi))

(defcfun ("_wrap_new_Rand_empty" new_Rand_empty) :sndobj_rand)

(defcfun ("_wrap_new_Rand" new_Rand) :sndobj_rand
  (amp :float)
  (InAmpObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Rand" delete_Rand) :void
  (self :sndobj_rand))

(defcfun ("_wrap_Rand_SetAmp" Rand_SetAmp) :void
  (self :sndobj_rand)
  (amp :float)
  (InAmpObj :sndobj))

(defcfun ("_wrap_Rand_Set" Rand_Set) :int
  (self :sndobj_rand)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Rand_Connect" Rand_Connect) :int
  (self :sndobj_rand)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_PhOscili_empty" new_PhOscili_empty) :sndobj_phoscili)

(defcfun ("_wrap_new_PhOscili" new_PhOscili) :sndobj_phoscili
  (table :sndobj_table)
  (fr :float)
  (amp :float)
  (inputfreq :sndobj)
  (inputamp :sndobj)
  (inputphase :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_PhOscili" delete_PhOscili) :void
  (self :sndobj_phoscili))

(defcfun ("_wrap_PhOscili_Connect" PhOscili_Connect) :int
  (self :sndobj_phoscili)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_Randh_empty" new_Randh_empty) :sndobj_randh)

(defcfun ("_wrap_new_Randh" new_Randh) :sndobj_randh
  (fr :float)
  (amp :float)
  (InFrObj :sndobj)
  (InAmpObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Randh" delete_Randh) :void
  (self :sndobj_randh))

(defcfun ("_wrap_Randh_Connect" Randh_Connect) :int
  (self :sndobj_randh)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_Randh_SetSr" Randh_SetSr) :void
  (self :sndobj_randh)
  (sr :float))

(defcfun ("_wrap_Randh_SetFreq" Randh_SetFreq) :void
  (self :sndobj_randh)
  (fr :float)
  (InFrObj :sndobj))

(defcfun ("_wrap_Randh_Set" Randh_Set) :int
  (self :sndobj_randh)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_Randi_empty" new_Randi_empty) :sndobj_randi)

(defcfun ("_wrap_new_Randi" new_Randi) :sndobj_randi
  (fr :float)
  (amp :float)
  (InFrObj :sndobj)
  (InAmpObj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Randi" delete_Randi) :void
  (self :sndobj_randi))

(defcfun ("_wrap_new_FFT_empty" new_FFT_empty) :sndobj_fft)

(defcfun ("_wrap_new_FFT" new_FFT) :sndobj_fft
  (window :sndobj_table)
  (input :sndobj)
  (scale :float)
  (fftsize :int)
  (hopsize :int)
  (m_sr :float))

(defcfun ("_wrap_delete_FFT" delete_FFT) :void
  (self :sndobj_fft))

(defcfun ("_wrap_FFT_GetFFTSize" FFT_GetFFTSize) :int
  (self :sndobj_fft))

(defcfun ("_wrap_FFT_GetHopSize" FFT_GetHopSize) :int
  (self :sndobj_fft))

(defcfun ("_wrap_FFT_SetWindow" FFT_SetWindow) :void
  (self :sndobj_fft)
  (window :sndobj_table))

(defcfun ("_wrap_FFT_Connect" FFT_Connect) :int
  (self :sndobj_fft)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_FFT_Set" FFT_Set) :int
  (self :sndobj_fft)
  (mess :string)
  (value :float))

(defcfun ("_wrap_FFT_SetScale" FFT_SetScale) :void
  (self :sndobj_fft)
  (scale :float))

(defcfun ("_wrap_FFT_SetFFTSize" FFT_SetFFTSize) :void
  (self :sndobj_fft)
  (fftsize :int))

(defcfun ("_wrap_FFT_SetHopSize" FFT_SetHopSize) :void
  (self :sndobj_fft)
  (hopsize :int))

(defcfun ("_wrap_new_IFFT_empty" new_IFFT_empty) :sndobj_ifft)

(defcfun ("_wrap_new_IFFT" new_IFFT) :sndobj_ifft
  (window :sndobj_table)
  (input :sndobj)
  (fftsize :int)
  (hopsize :int)
  (sr :float))

(defcfun ("_wrap_delete_IFFT" delete_IFFT) :void
  (self :sndobj_ifft))

(defcfun ("_wrap_IFFT_GetFFTSize" IFFT_GetFFTSize) :int
  (self :sndobj_ifft))

(defcfun ("_wrap_IFFT_GetHopSize" IFFT_GetHopSize) :int
  (self :sndobj_ifft))

(defcfun ("_wrap_IFFT_SetWindow" IFFT_SetWindow) :void
  (self :sndobj_ifft)
  (window :sndobj_table))

(defcfun ("_wrap_IFFT_Connect" IFFT_Connect) :int
  (self :sndobj_ifft)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_IFFT_Set" IFFT_Set) :int
  (self :sndobj_ifft)
  (mess :string)
  (value :float))

(defcfun ("_wrap_IFFT_SetFFTSize" IFFT_SetFFTSize) :void
  (self :sndobj_ifft)
  (fftsize :int))

(defcfun ("_wrap_IFFT_SetHopSize" IFFT_SetHopSize) :void
  (self :sndobj_ifft)
  (hopsize :int))

(defcfun ("_wrap_new_PVA_empty" new_PVA_empty) :sndobj_pva)

(defcfun ("_wrap_new_PVA" new_PVA) :sndobj_pva
  (window :sndobj_table)
  (input :sndobj)
  (scale :float)
  (fftsize :int)
  (hopsize :int)
  (sr :float))

(defcfun ("_wrap_delete_PVA" delete_PVA) :void
  (self :sndobj_pva))

(defcfun ("_wrap_PVA_Outphases" PVA_Outphases) :float
  (self :sndobj_pva)
  (pos :int))

(defcfun ("_wrap_PVA_Set" PVA_Set) :int
  (self :sndobj_pva)
  (mess :string)
  (value :float))

(defcfun ("_wrap_PVA_SetFFTSize" PVA_SetFFTSize) :void
  (self :sndobj_pva)
  (fftsize :int))

(defcfun ("_wrap_PVA_SetHopSize" PVA_SetHopSize) :void
  (self :sndobj_pva)
  (hopsize :int))

(defcfun ("_wrap_new_PVSempty" new_PVS_empty) :sndobj_pvs)

(defcfun ("_wrap_new_PVS" new_PVS) :sndobj_pvs
  (window :sndobj_table)
  (input :sndobj)
  (fftsize :int)
  (hopsize :int)
  (sr :float))

(defcfun ("_wrap_delete_PVS" delete_PVS) :void
  (self :sndobj_pvs))

(defcfun ("_wrap_PVS_Set" PVS_Set) :int
  (self :sndobj_pvs)
  (mess :string)
  (value :float))

(defcfun ("_wrap_PVS_SetFFTSize" PVS_SetFFTSize) :void
  (self :sndobj_pvs)
  (fftsize :int))

(defcfun ("_wrap_PVS_SetHopSize" PVS_SetHopSize) :void
  (self :sndobj_pvs)
  (hopsize :int))

(defcfun ("_wrap_PVRead_Outchannel" PVRead_Outchannel) :sndobj
  (self :sndobj_pvread)
  (channel :int))

(defcfun ("_wrap_PVRead_Set" PVRead_Set) :int
  (self :sndobj_pvread)
  (mess :string)
  (value :float))

(defcfun ("_wrap_PVRead_SetInput" PVRead_SetInput) :void
  (self :sndobj_pvread)
  (name :string))

(defcfun ("_wrap_PVRead_SetTimescale" PVRead_SetTimescale) :void
  (self :sndobj_pvread)
  (timescale :float))

(defcfun ("_wrap_new_PVRead_empty" new_PVRead_empty) :sndobj_pvread)

(defcfun ("_wrap_new_PVRead" new_PVRead) :sndobj_pvread
  (name :string)
  (timescale :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_PVRead" delete_PVRead) :void
  (self :sndobj_pvread))

(defcfun ("_wrap_new_IFGram_empty" new_IFGram_empty) :sndobj_ifgram)

(defcfun ("_wrap_new_IFGram" new_IFGram) :sndobj_ifgram
  (window :sndobj_table)
  (input :sndobj)
  (scale :float)
  (fftsize :int)
  (hopsize :int)
  (sr :float))

(defcfun ("_wrap_delete_IFGram" delete_IFGram) :void
  (self :sndobj_ifgram))

(defcfun ("_wrap_IFGram_Set" IFGram_Set) :int
  (self :sndobj_ifgram)
  (mess :string)
  (value :float))

(defcfun ("_wrap_IFGram_Connect" IFGram_Connect) :int
  (self :sndobj_ifgram)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_IFGram_SetFFTSize" IFGram_SetFFTSize) :void
  (self :sndobj_ifgram)
  (fftsize :int))

(defcfun ("_wrap_new_SinAnal_empty" new_SinAnal_empty) :sndobj_sinanal)

(defcfun ("_wrap_new_SinAnal" new_SinAnal) :sndobj_sinanal
  (input :sndobj)
  (threshold :float)
  (maxtracks :int)
  (minpoints :int)
  (maxgap :int)
  (sr :float))

(defcfun ("_wrap_delete_SinAnal" delete_SinAnal) :void
  (self :sndobj_sinanal))

(defcfun ("_wrap_SinAnal_GetTrackID" SinAnal_GetTrackID) :int
  (self :sndobj_sinanal)
  (track :int))

(defcfun ("_wrap_SinAnal_GetTracks" SinAnal_GetTracks) :int
  (self :sndobj_sinanal))

(defcfun ("_wrap_SinAnal_Set" SinAnal_Set) :int
  (self :sndobj_sinanal)
  (mess :string)
  (value :float))

(defcfun ("_wrap_SinAnal_Connect" SinAnal_Connect) :int
  (self :sndobj_sinanal)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_SinAnal_SetThreshold" SinAnal_SetThreshold) :void
  (self :sndobj_sinanal)
  (threshold :float))

(defcfun ("_wrap_SinAnal_SetIFGram" SinAnal_SetIFGram) :void
  (self :sndobj_sinanal)
  (input :sndobj))

(defcfun ("_wrap_SinAnal_SetMaxTracks" SinAnal_SetMaxTracks) :void
  (self :sndobj_sinanal)
  (maxtracks :int))

(defcfun ("_wrap_new_SinSyn_empty" new_SinSyn_empty) :sndobj_sinsyn)

(defcfun ("_wrap_new_SinSyn" new_SinSyn) :sndobj_sinsyn
  (input :sndobj_sinanal)
  (maxtracks :int)
  (table :sndobj_table)
  (scale :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SinSyn" delete_SinSyn) :void
  (self :sndobj_sinsyn))

(defcfun ("_wrap_SinSyn_SetTable" SinSyn_SetTable) :void
  (self :sndobj_sinsyn)
  (table :sndobj_table))

(defcfun ("_wrap_SinSyn_SetMaxTracks" SinSyn_SetMaxTracks) :void
  (self :sndobj_sinsyn)
  (maxtracks :int))

(defcfun ("_wrap_SinSyn_SetScale" SinSyn_SetScale) :void
  (self :sndobj_sinsyn)
  (scale :float))

(defcfun ("_wrap_SinSyn_Set" SinSyn_Set) :int
  (self :sndobj_sinsyn)
  (mess :string)
  (value :float))

(defcfun ("_wrap_SinSyn_Connect" SinSyn_Connect) :int
  (self :sndobj_sinsyn)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_ReSyn_empty" new_ReSyn_empty) :sndobj_resyn)

(defcfun ("_wrap_new_ReSyn" new_ReSyn) :sndobj_resyn
  (input :sndobj_sinanal)
  (maxtracks :int)
  (table :sndobj_table)
  (pitch :float)
  (scale :float)
  (tscal :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_ReSyn_SetPitch" ReSyn_SetPitch) :void
  (self :sndobj_resyn)
  (pitch :float))

(defcfun ("_wrap_ReSyn_SetTimeScale" ReSyn_SetTimeScale) :void
  (self :sndobj_resyn)
  (scale :float))

(defcfun ("_wrap_ReSyn_Set" ReSyn_Set) :int
  (self :sndobj_resyn)
  (mess :string)
  (value :float))

(defcfun ("_wrap_delete_ReSyn" delete_ReSyn) :void
  (self :sndobj_resyn))

(defcfun ("_wrap_new_AdSyn_empty" new_AdSyn_empty) :sndobj_adsyn)

(defcfun ("_wrap_new_AdSyn" new_AdSyn) :sndobj_adsyn
  (input :sndobj_sinanal)
  (maxtracks :int)
  (table :sndobj_table)
  (pitch :float)
  (scale :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_AdSyn" delete_AdSyn) :void
  (self :sndobj_adsyn))

(defcfun ("_wrap_new_IFAdd_empty" new_IFAdd_empty) :sndobj_ifadd)

(defcfun ("_wrap_new_IFAdd" new_IFAdd) :sndobj_ifadd
  (input :sndobj_ifgram)
  (bins :int)
  (table :sndobj_table)
  (pitch :float)
  (scale :float)
  (tscal :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_IFAdd" delete_IFAdd) :void
  (self :sndobj_ifadd))

(defcfun ("_wrap_new_SpecMult_empty" new_SpecMult_empty) :sndobj_specmult)

(defcfun ("_wrap_new_SpecMult" new_SpecMult) :sndobj_specmult
  (input1 :sndobj)
  (input2 :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_SpecMult_table" new_SpecMult_table) :sndobj_specmult
  (spectab :sndobj_table)
  (input1 :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SpecMult" delete_SpecMult) :void
  (self :sndobj_specmult))

(defcfun ("_wrap_SpecMult_Connect" SpecMult_Connect) :int
  (self :sndobj_specmult)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_SpecMult_SetInput2" SpecMult_SetInput2) :void
  (self :sndobj_specmult)
  (input2 :sndobj))

(defcfun ("_wrap_SpecMult_SetTable" SpecMult_SetTable) :void
  (self :sndobj_specmult)
  (spectab :sndobj_table))

(defcfun ("_wrap_new_SpecInterp_empty" new_SpecInterp_empty) :sndobj_specinterp)
